# ALE

./: .gitignore  PLAN.md  dev.ps1  plan.md  pyproject.toml
agentic_libs/examples/: rate-limiter.agentic.yaml
ale/: __init__.py  cli.py
ale/ai_query/: __init__.py  models.py  store.py
ale/analyzers/: code_analyzer.py  context_builder.py  repo_analyzer.py  scorer.py
ale/auth/: models.py  oauth.py  permissions.py  store.py
ale/distribution/: __init__.py  consumer_scaffold.py  readme_generator.py  renderer.py  versions_manifest.py
ale/generators/: library_generator.py
ale/ir/: __init__.py  models.py  python_parser.py
ale/llm/: __init__.py  client.py  prompts.py  usage_tracker.py
ale/models/: agentic_library.py  candidate.py
ale/moderation/: __init__.py  models.py  moderator.py
ale/orgs/: models.py  org_store.py
ale/policies/: __init__.py  approval_store.py  policy_store.py
ale/registry/: __init__.py  local_registry.py  models.py
ale/security/: audit_log.py  plugin_manager.py  webhook_manager.py
ale/spec/: __init__.py  conformance_history.py  reference_runner.py  schema.py  schema_validator.py  semantic_validator.py
ale/sync/: __init__.py  drift.py  policy.py  provenance.py  update_checker.py
ale/utils/: file_scanner.py  git_ops.py  validator.py
docs/: agentic-library-spec.md  architecture.md  web-portal-features.md
tests/: test_file_scanner.py  test_ir.py  test_models.py  test_registry.py  test_spec.py  test_sync.py  test_validator.py
web/backend/: requirements.txt
web/frontend/: package-lock.json  package.json
(+63 files in other folders)
